--- a/index.html
+++ b/index.html
@@ -26,19 +26,28 @@
 <div class="menubarra" id="menubarra">
 
   <div id="zap">
-<h4>Whatssap</h4>
+
+<a href="https://wa.me/556799636328?text=ol%C3%A1%2C+quero+conversar%21" 
+      target="_blank"><h4>Whatssap</h4></a>
   </div>
 
   <div id="insta">
-<h4>Instagram</h4>
+
+<a href="https://www.instagram.com/jp_motos_oficina/" 
+      target="_blank"><h4>Instagram</h4>
+</a>
+  
+
   </div>
 
     <div id="peças">
-<h4>Home</h4>
+
+<a href="https://pedro262492.github.io/JP_Motos-Pe-as/"><h4>Peças</h4></a>
+
   </div>
 
    <div id="serviços">
-<h4>Serviços</h4>
+<a href="https://pedro262492.github.io/JP_Motos_Site_Oficial/"><h4>Home</h4></a>
   </div>
 
    <div id="anuncio">
@@ -46,7 +55,10 @@
   </div>
 
    <div id="story">
-<h4>Sobre nós</h4>
+
+
+ <a href="https://pedro262492.github.io/JP_Motos-Historia/"><h4>Sobre nós</h4></a>
+
   </div>
 
 
